[gd_scene load_steps=4 format=3 uid="uid://bpwdfknm1xnk0"]

[ext_resource type="Script" path="res://menu.gd" id="1_t3fk3"]
[ext_resource type="PackedScene" uid="uid://bptypvv3axqv6" path="res://background/bg.tscn" id="2_48ivi"]
[ext_resource type="AudioStream" uid="uid://dc6vj51idmawm" path="res://sounds/Horror_music_Obsidian_pack_by_SzajnaWorkshop v1.01/22G18_Obsidian004_PianoLoop_OGGV_VBR060.ogg" id="3_2rdow"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_t3fk3")

[node name="BrightSideButton" type="Button" parent="."]
offset_left = 461.0
offset_top = 226.0
offset_right = 732.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 50
text = "Bright Side"

[node name="DarkSideButton" type="Button" parent="."]
offset_left = 461.0
offset_top = 323.0
offset_right = 733.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 50
text = "Dark Side"

[node name="QUIT" type="Button" parent="."]
offset_left = 54.0
offset_top = 534.0
offset_right = 264.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="BG" parent="." instance=ExtResource("2_48ivi")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2rdow")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="BrightSideButton" to="." method="_on_bright_side_button_pressed"]
[connection signal="pressed" from="DarkSideButton" to="." method="_on_dark_side_button_pressed"]
[connection signal="pressed" from="QUIT" to="." method="_on_quit_pressed"]
